--- a/package.json
+++ b/package.json
@@ -180,6 +180,7 @@
     "immutable": "^3.7.4",
     "intl": "^1.2.5",
     "jest": "^23.6.0",
+    "jest-dom": "^2.1.0",
     "jsuri": "^1.3.1",
     "leche": "^2.2.3",
     "lint-staged": "^7.2.2",
@@ -207,6 +208,7 @@
     "react-modal": "^3.5.1",
     "react-process-string": "^1.2.0",
     "react-styleguidist": "^7.3.8",
+    "react-testing-library": "^5.2.3",
     "react-tether": "^0.6.1",
     "react-textarea-autosize": "^6.1.0",
     "react-virtualized": "^9.20.1",
