chore: rename conf to scripts (#1277)

--- a/.npmignore
+++ b/.npmignore
@@ -29,7 +29,6 @@ babel.config.js
 build
 CODEOWNERS
 commitlint.config.js
-conf
 coverage
 cypress.json
 desktop.ini
@@ -42,6 +41,7 @@ npm-error.log
 postcss.config.js
 release.config.js
 reports
+scripts
 styleguide
 stylelint.config.js
 test
