--- a/package.json
+++ b/package.json
@@ -39,16 +39,16 @@
         "build": "yarn build:dev:dist",
         "build:ci:es": "yarn build:prod:es",
         "build:ci:dist": "LANGUAGE=en-US REACT=true yarn build:prod:dist",
-        "build:dev:dist": "LANGUAGE=en-US BABEL_ENV=dev NODE_ENV=dev webpack --config conf/webpack.config.js --mode development --progress --colors",
+        "build:dev:dist": "LANGUAGE=en-US BABEL_ENV=dev NODE_ENV=dev webpack --config scripts/webpack.config.js --mode development --progress --colors",
         "build:dev:es": "BABEL_ENV=dev NODE_ENV=dev yarn build:es --copy-files --source-maps inline --watch --ignore \"**/__tests__/**\"",
         "build:es": "babel src --out-dir es",
         "build:i18n": "props2es",
         "build:npm": "npm-run-all clean build:i18n build:prod:npm build:prod:es",
         "build:prod:es": "BABEL_ENV=npm NODE_ENV=production yarn build:es --ignore \"**/__tests__/**\"",
-        "build:prod:dist": "NODE_ENV=production webpack --config conf/webpack.config.js --mode production",
-        "build:prod:examples": "LANGUAGE=en-US REACT=true NODE_ENV=production node --max_old_space_size=8192 node_modules/react-styleguidist/bin/styleguidist.js build --config conf/styleguide.config.js --mode production",
+        "build:prod:dist": "NODE_ENV=production webpack --config scripts/webpack.config.js --mode production",
+        "build:prod:examples": "LANGUAGE=en-US REACT=true NODE_ENV=production node --max_old_space_size=8192 node_modules/react-styleguidist/bin/styleguidist.js build --config scripts/styleguide.config.js --mode production",
         "build:prod:npm": "BABEL_ENV=production OUTPUT=dist LANGUAGE=en-US REACT=true yarn build:prod:dist",
-        "build:variables": "node ./conf/build-style-vars.js ./src/styles/_variables.scss ./src/styles/variables.js ./src/styles/variables.json",
+        "build:variables": "node ./scripts/build-style-vars.js ./src/styles/_variables.scss ./src/styles/variables.js ./src/styles/variables.json",
         "clean": "rm -rf dist es i18n/json i18n/*.js reports styleguide",
         "copy:styles": "copyfiles './src/**/*.scss' es --up 1",
         "copy:flow": "flow-copy-source --ignore \"**/__tests__/**\" ./src ./es",
@@ -60,14 +60,14 @@
         "lint:css": "stylelint \"src/**/*.scss\" --syntax scss",
         "prebuild:es": "npm-run-all build:variables copy:styles copy:flow",
         "release": "yarn release:beta",
-        "release:beta": "BRANCH=master ./conf/release.sh",
-        "release:latest": "BRANCH=release ./conf/release.sh",
-        "release:hotfix": "HOTFIX=true ./conf/release.sh",
-        "release:cdn": "yarn setup; node ./conf/prod.js",
+        "release:beta": "BRANCH=master ./scripts/release.sh",
+        "release:latest": "BRANCH=release ./scripts/release.sh",
+        "release:hotfix": "HOTFIX=true ./scripts/release.sh",
+        "release:cdn": "yarn setup; node ./scripts/prod.js",
         "setup": "yarn install --frozen-lockfile; npm-run-all clean build:i18n",
         "start": "yarn start:examples",
-        "start:dev": "yarn setup; LANGUAGE=en-US BABEL_ENV=dev NODE_ENV=dev node --max_old_space_size=8192 node_modules/webpack-dev-server/bin/webpack-dev-server.js --config conf/webpack.config.js --mode development",
-        "start:examples": "yarn setup; EXAMPLES=true LANGUAGE=en-US REACT=true BABEL_ENV=dev NODE_ENV=dev node --max_old_space_size=8192 node_modules/react-styleguidist/bin/styleguidist.js server --config conf/styleguide.config.js --mode development",
+        "start:dev": "yarn setup; LANGUAGE=en-US BABEL_ENV=dev NODE_ENV=dev node --max_old_space_size=8192 node_modules/webpack-dev-server/bin/webpack-dev-server.js --config scripts/webpack.config.js --mode development",
+        "start:examples": "yarn setup; EXAMPLES=true LANGUAGE=en-US REACT=true BABEL_ENV=dev NODE_ENV=dev node --max_old_space_size=8192 node_modules/react-styleguidist/bin/styleguidist.js server --config scripts/styleguide.config.js --mode development",
         "start:examples:legacy": "BROWSERSLIST_ENV=production yarn start:examples",
         "start:npm": "yarn setup; yarn build:dev:es",
         "test": "BABEL_ENV=test NODE_ENV=test yarn jest",
@@ -98,7 +98,7 @@
     "husky": {
         "hooks": {
             "pre-commit": "lint-staged",
-            "pre-push": "./conf/prepush.sh",
+            "pre-push": "./scripts/prepush.sh",
             "commit-msg": "commitlint -e"
         }
     },
@@ -106,22 +106,22 @@
         "clearMocks": true,
         "restoreMocks": true,
         "moduleNameMapper": {
-            "react-intl": "<rootDir>/conf/jest/mocks/react-intl-mocks.js",
+            "react-intl": "<rootDir>/scripts/jest/mocks/react-intl-mocks.js",
             "react-intl-locale-data": "<rootDir>/node_modules/react-intl/locale-data/en.js",
             "box-ui-elements-locale-data": "<rootDir>/i18n/en-US.js",
-            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/conf/jest/fileMock.js",
-            "\\.(css|less|scss)$": "<rootDir>/conf/jest/mocks/styleMock.js",
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/scripts/jest/fileMock.js",
+            "\\.(css|less|scss)$": "<rootDir>/scripts/jest/mocks/styleMock.js",
             "react-virtualized/dist/es": "react-virtualized/dist/commonjs"
         },
         "transformIgnorePatterns": ["node_modules/(?!(react-virtualized/dist/es))"],
         "collectCoverage": false,
         "coverageDirectory": "<rootDir>/reports",
         "collectCoverageFrom": ["src/**/*.js", "!**/node_modules/**", "!**/__tests__/**"],
-        "globalSetup": "<rootDir>/conf/jest/env-setup.js",
+        "globalSetup": "<rootDir>/scripts/jest/env-setup.js",
         "roots": ["src"],
         "setupFilesAfterEnv": [
             "<rootDir>/node_modules/regenerator-runtime/runtime.js",
-            "<rootDir>/conf/jest/enzyme-adapter.js"
+            "<rootDir>/scripts/jest/enzyme-adapter.js"
         ],
         "snapshotSerializers": ["enzyme-to-json/serializer"]
     },
