--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
     - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.13.0
     - export PATH=$HOME/.yarn/bin:$PATH
     - export TZ=America/Los_Angeles
+    - export HUSKY_SKIP_HOOKS=1
 jobs:
   include:
     - name: "Commit Lint"
