build(ci): reduce number of jobs (#1303)

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,17 +13,9 @@ before_install:
     - export HUSKY_SKIP_HOOKS=1
 jobs:
   include:
-    - name: "Commit Lint"
-      script: commitlint-travis
-    - name: "Code Lint"
-      script: npm-run-all clean build:i18n lint
-    - name: "Flow Types"
-      script: npm-run-all clean build:i18n && echo "Running Flow on $(yarn flow ls | wc -l) files" && yarn flow
-    - name: "Unit Tests"
-      script: yarn test
+    - name: "Lint & Build"
+      script: commitlint-travis && npm-run-all clean build:i18n lint build:ci:es build:ci:dist && echo "Running Flow on $(yarn flow ls | wc -l) files" && yarn flow
     - name: "E2E Tests"
       script: yarn test:e2e
-    - name: "Build Babel"
-      script: npm-run-all clean build:i18n build:ci:es
-    - name: "Build Webpack"
-      script: npm-run-all clean build:i18n build:ci:dist
+    - name: "Unit Tests"
+      script: yarn test
