--- a/package.json
+++ b/package.json
@@ -172,6 +172,9 @@
         "@types/webpack": "^4.41.3",
         "@typescript-eslint/eslint-plugin": "^2.18.0",
         "@typescript-eslint/parser": "^2.18.0",
+        "@zeplin/cli": "^1.0.0",
+        "@zeplin/cli-connect-react-plugin": "^0.2.3",
+        "@zeplin/cli-connect-storybook-plugin": "^0.1.4",
         "autoprefixer": "^9.7.4",
         "axios": "0.18.1",
         "babel-core": "^7.0.0-bridge.0",
